@@ -65,6 +65,11 @@ Jeremy Burch <ascii021 at yahoo dot com>
 JL Farinacci
   pad_percents
 
+Johannes Winkelmann <winkj at users dot sourceforge dot net>
+  disk I/O on linux
+  more consistent cpu freq handling on linux
+  capitalize Hertz in cpu frequeny
+
 jolapache <jolapache at free dot fr>
   maildir format
 
